--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <canvas id="Canvas"></canvas>
-    <script type="module" src="./test.js"></script>
+    <script type="module" src="./SpaceShip.js"></script>
 </body>
 
 </html>
