--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: rgb(255, 255, 255);
         }
 
-        ∆ canvas {
+        canvas {
             border: 1px solid black;
         }
     </style>
