--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: rgb(255, 255, 255);
         }
 
-        ∆ canvas {
+        canvas {
             border: 1px solid black;
         }
     </style>
@@ -20,7 +20,7 @@
 
 <body>
     <canvas id="Canvas"></canvas>
-    <script type="module" src="./SpaceShip.js"></script>
+    <script type="module" src="./test.js"></script>
 </body>
 
 </html>
