--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="data:;base64,=">
-    <title>Pluie de Concav</title>
+    <title>Asteroids</title>
     <style>
         body {
             margin: 0px;
             padding: 0px;
-            background-color: rgb(255, 255, 255);
+            overflow-y: hidden;
+            background-color: black;
         }
 
         ∆ canvas {
-            border: 1px solid black;
+            border: 0px solid black;
+            
         }
     </style>
 </head>
 
 <body>
-    <canvas id="Canvas"></canvas>
     <script type="module" src="./SpaceShip.js"></script>
+    <canvas id="Canvas"></canvas>
 </body>
 
 </html>
