Add Asteroid basic behavior

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="data:;base64,=">
-    <title>Pluie de Concav</title>
+    <title>Asteroids</title>
     <style>
         body {
             margin: 0px;
             padding: 0px;
             background-color: rgb(255, 255, 255);
+            overflow: hidden;
         }
 
         canvas {
