--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="data:;base64,=">
-    <title>Asteroids</title>
+    <title>Trigo_Pain</title>
     <style>
         body {
             margin: 0px;
